hphp/test/zend/good/Zend/tests/objects_025.php.expectf
non-static - ok
non-static - ok
non-static - ok
non-static - ok

Fatal error: Method name must be a string in %s/objects_025.php on line 22
